# AminScan

./: .aminscan.yml  .aminscanignore  .gitignore  CHANGELOG.md  LICENSE  README.md  aminscan-report.json  pyproject.toml
.github/workflows/: aminscan.yml
src/aminscan/: cli.py  config.py  entropy.py  file_utils.py  secrets_rules.py  secrets_scanner.py  web_scanner.py
src/aminscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_entropy.py  test_markdown.py
