[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aminscan"
version = "0.0.2"
description = "AminScan: Secrets & Misconfig Scanner for CI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0", "PyYAML>=6.0.1"]

[project.scripts]
aminscan = "aminscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

